# cjworkbench

./: .babelrc  .dockerignore  .gcloudignore  .gitignore  .gitmodules  .linguirc  .tern-project  .travis.yml  .watchmanconfig  Dockerfile  Dockerfile.integration-test  Dockerfile.integrationtest  Pipfile  README.md  _deprecated_i18n_messages.py  babel.config.json  client_secret.json.enc  cloudbuild.yaml  database.yml  db.sqlite3  docker-bake.hcl  docker-compose.commands.yml  docker-compose.yml  lingui.config.js  manage.py  package-lock.json  package.json  pipfile  pybabel.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  setupJest.js  setup_project.sh  start-prod.sh  watchjs  webpack-stats.json  webpack.config.js
__mocks__/: popper.js.js
cjwkernel/: chroot.py  errors.py  files.py  i18n.py  kernel.py  param_dtype.py  parquet.py  settings.py  setup-chroot-layers.sh  setup-chroots.sh  setup-sandboxes.sh  teardown-sandboxes.sh  thrift.thrift  types.py  util.py  validate.py
cjworkbench/: README  __init__.py  admin.py  allauth_account_adapter.py  apps.py  asgi.py  google_oauth.py  pandas_util.py  pg_render_locker.py  rabbitmq.py  routing.py  sendgrid_email.py  settings.py  signals.py  sync.py  types.py  urls.py  util.py  wsgi.py
cjwstate/: clientside.py  commands.py  errors.py  importmodule.py  minio.py  oauth.py  params.py  parquet.py  s3.py  upload.py  util.py
cron/: autoupdate.py  deltadeleter.py  expiredsessiondeleter.py  lessonautoupdatedisabler.py  lessons.py  lessonworkflowdeleter.py  main.py  sessions.py  settings.py  uploads.py
daphne/: __init__.py  testing.py
deploy/: advanced-deploy  clear-render-cache  psql  refresh-suggested-modules  restart-because-you-know-what-you-are-doing  show-status  update-production-to-staging  update-staging-to-latest-passing-master
docker/: Dockerfile  forkserver-seccomp-profile.json  pycloner-seccomp-profile.json  pyspawner-seccomp-profile.json
fetcher/: fetch.py  fetchprep.py  main.py  save.py  secrets.py  settings.py  util.py  versions.py
i18n/: localize.py  trans.py
integrationtests/: docker-compose.cloudbuild-override.yml  docker-compose.dev-override.yml  docker-compose.yml  start-vnc  test_acl.py  test_api.py  test_duplicate.py  test_embed.py  test_example_workflow.py  test_i18n.py  test_lessons.py  test_login.py  test_module_deprecation.py  test_new_workflow.py  test_notifications.py  test_password_reset.py  test_pythoncode.py  test_quickfix.py  test_refine.py  test_reorder.py  test_report.py  test_signup.py  test_step.py  test_table.py  test_tabs.py  test_upload.py  test_wfmodule.py  test_workflow.py  utils.py
integrationtests/module-zipfile-server/modules/columnchart/: CHANGELOG.md  Pipfile  README.md  README.rst  _deprecated_i18n_messages.py  columnchart.html  columnchart.py  columnchart.yaml  pyproject.toml  setup.py
integrationtests/module-zipfile-server/modules/columnchart/locale/el/: messages.po
integrationtests/module-zipfile-server/modules/columnchart/locale/en/: messages.po
integrationtests/module-zipfile-server/modules/columnchart/locale/templates/: messages.pot
integrationtests/module-zipfile-server/modules/columnchart/tests/: test_migrate_params.py  test_render.py
integrationtests/module-zipfile-server/modules/filter/: .gitignore  Pipfile  README.md  _deprecated_i18n_messages.py  filter.json  filter.py  filter.yaml  pyproject.toml  test_filter.py
integrationtests/module-zipfile-server/modules/filter/locale/el/: messages.po
integrationtests/module-zipfile-server/modules/filter/locale/en/: messages.po
integrationtests/module-zipfile-server/modules/filter/locale/templates/: messages.pot
integrationtests/module-zipfile-server/modules/filter/tests/: test_filter.py
integrationtests/module-zipfile-server/modules/pythoncode/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pythoncode.html  pythoncode.py  pythoncode.yaml
integrationtests/module-zipfile-server/modules/pythoncode/tests/: test_migrate_params.py  test_render.py
integrationtests/module-zipfile-server/modules/renamecolumns/: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml  renamecolumns.py  renamecolumns.yaml  setup.py  test_renamecolumns.py
integrationtests/module-zipfile-server/modules/renamecolumns/locale/el/: messages.po
integrationtests/module-zipfile-server/modules/renamecolumns/locale/en/: messages.po
integrationtests/module-zipfile-server/modules/renamecolumns/locale/templates/: messages.pot
integrationtests/module-zipfile-server/modules/renamecolumns/tests/: test_migrate_params.py  test_render.py
integrationtests/module-zipfile-server/modules/reshape/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  reshape.py  reshape.yaml  test_reshape.py
integrationtests/module-zipfile-server/modules/reshape/locale/el/: messages.po
integrationtests/module-zipfile-server/modules/reshape/locale/en/: messages.po
integrationtests/module-zipfile-server/modules/reshape/locale/templates/: messages.pot
integrationtests/module-zipfile-server/modules/reshape/tests/: test_reshape.py
kernel/: thrift.thrift
newenv/: .Python  pip-selfcheck.json
renderer/: main.py  notifications.py  publish.py  render.py  settings.py
server/: __init__.py  admin.py  apps.py  converters.py  dispatch.py  dynamicdispatch.py  example_workflows.py  execute.py  forms.py  importmodulefromgithub.py  initmodules.py  maintenance.py  minio.py  models.py  notifications.py  oauth.py  pandas_util.py  parquet.py  rabbitmq.py  sanitizedataframe.py  serializers.py  settings.py  settingsutils.py  staticfiles.py  tests.py  triggerrender.py  types.py  updates.py  urls.py  utils.py  versions.py  views.py  websockets.py  worker.py
staticfilesdev/: apps.py  asgi.py  finders.py  settings.py
staticmodules/: concattabs.json  concattabs.yaml  converttexttonumber.py  converttexttonumber.yaml  converttotext.py  converttotext.yaml  countbydate.py  countbydate.yaml  duplicatecolumns.py  duplicatecolumns.yaml  editcells.json  editcells.py  editcells.yaml  formatnumbers.yaml  formula.py  formula.yaml  googlesheets.json  googlesheets.py  (+33 more)
(+2804 files in other folders)
