[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "filter"
version = "0.0.1"
description = "Workbench module to filter for rows matching condition"
authors = ["Adam Hooper <adam@adamhooper.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.8"
cjwmodule = "~=3.1"
pyarrow = "~=2.0"

[tool.poetry.dev-dependencies]
pytest = "~=6.0"

[tool.isort]
# Black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["cjwmodule", "pyarrow", "pytest"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = True
envlist = py38-{pyflakes,black,isort,pytest}

[flake8]
exclude = venv/*,tox/*,specs/*,build/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 88

[testenv]
deps =
  pyflakes: pyflakes>=2.2
  black: black
  isort: isort
commands =
  pyflakes: pyflakes filter.py tests
  black: black --check filter.py tests
  isort: isort --check --diff filter.py tests

[testenv:py38-pytest]
deps =
  pytest~=6.0
commands =
  pip install -q .
  pytest
"""
